deploy/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook
---
apiVersion: v1
kind: Service
metadata:
  name: node-selector
  namespace: webhook
  labels:
    app: node-selector
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: node-selector
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-selector
  namespace: webhook
  labels:
    app: node-selector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-selector
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-selector
    spec:
      volumes:
        - name: volume-h9oo0c
          secret:
            secretName: node-selector
            items:
              - key: cert.pem
                path: server-cert.pem
              - key: key.pem
                path: server-key.pem
            defaultMode: 420
      containers:
        - name: node-selector
          image: '364554757/webhook:v0.13'
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
          resources: {}
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: volume-h9oo0c
              readOnly: true
              mountPath: /etc/webhook
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 600
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: node-selector
  labels:
    app: node-selector
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURxRENDQXBDZ0F3SUJBZ0lSQUo0aEx2UDhlQTg0d0tJSkNNTlBzRjB3RFFZSktvWklodmNOQVFFTEJRQXcKRlRFVE1CRUdBMVVFQXhNS2JXbHVhV3QxWW1WRFFUQWVGdzB5TWpFd01UZ3dPRE13TWpsYUZ3MHlNekV3TVRndwpPRE13TWpsYU1EUXhNakF3QmdOVkJBTVRLV0ZrYldsemMybHZiaTEzWldKb2IyOXJMV1Y0WVcxd2JHVXRjM1pqCkxtUmxabUYxYkhRdWMzWmpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXZhc08KekdlQnZZaHNMZ1Jxam5TQng3UU1pMmVtbGpYK2tSSHF2WSsxU0V6UkRwbWFnV2JOVEJDamJVY2RnUHRxQmJuVwp0K1hmWWdydW5S [...]
      service: # 调用服务相关配置，这里是一个k8s的service，访问地址是<name>.<namespace>.svc:<port>/<path>
        name: node-selector
        namespace: webhook
        path: /nodeselector
        port: 443
    failurePolicy: Ignore
    name: node-selector.kubernetes.io
    namespaceSelector:
      matchLabels:
        webhook: enable
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - deployments
