deploy/mutating.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: node-selector-sts
  labels:
    app: node-selector-sts
webhooks:
  - sideEffects: None
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJeE1EZ3hNVEE0TlRNMU5Gb1hEVE14TURneE1EQTROVE0xTkZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTlU1CjhNNGJiZTdJUlFWckZJaGxBQmkreXdzcVRHY1ZEc0ZMelJYc2JLZFExTEs4NWk4MEJ3Q0YxNEE1eUV2cTlkVjcKV3VYSWZGMW9adlN2V0JBU0t2ejQzOFYyK1JPVG1yNzRRRmJPTnM0Wm5IZFoxcDZTMlUyL2IzSzJpYmlqZHhwRQo4S3plVlJSVXNt [...]
      service: # 调用服务相关配置，这里是一个k8s的service，访问地址是<name>.<namespace>.svc:<port>/<path>
        name: node-selector
        namespace: webhook
        path: /sts
        port: 443
    failurePolicy: Ignore
    name: node-selector.kubernetes.io
    namespaceSelector:
      matchLabels:
        webhook: enable
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statefulsets
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: node-selector-dp
  labels:
    app: node-selector-dp
webhooks:
  - sideEffects: None
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJeE1EZ3hNVEE0TlRNMU5Gb1hEVE14TURneE1EQTROVE0xTkZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTlU1CjhNNGJiZTdJUlFWckZJaGxBQmkreXdzcVRHY1ZEc0ZMelJYc2JLZFExTEs4NWk4MEJ3Q0YxNEE1eUV2cTlkVjcKV3VYSWZGMW9adlN2V0JBU0t2ejQzOFYyK1JPVG1yNzRRRmJPTnM0Wm5IZFoxcDZTMlUyL2IzSzJpYmlqZHhwRQo4S3plVlJSVXNt [...]
      service: # 调用服务相关配置，这里是一个k8s的service，访问地址是<name>.<namespace>.svc:<port>/<path>
        name: node-selector
        namespace: webhook
        path: /dp
        port: 443
    failurePolicy: Ignore
    name: node-selector.kubernetes.io
    namespaceSelector:
      matchLabels:
        webhook: enable
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
